# rt-screening-calibration

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  reproduce_all_manuscript_results.sh  requirements-lock.txt  requirements.txt  run_additional_analyses.sh  run_all.sh  run_smoke.sh  run_stage.ps1  run_submission_checks.sh
config/: config.yaml  leakage_full.yaml  leakage_quick.yaml
data/metadata/: README.md
data/raw/: README.md
data/splits/: README.md
reports/: ANALYSIS_REPORT.md  FRONTIERS_SUBMISSION_NOTES.md  RUN_REPORT.md  additional_analysis_runtime_report.csv  reference_crossref_check.tsv  runtime_report.csv
results/: README.md
results/figures/: figure7_escalation_burden_frontier.tiff  figure8_process_quality_error_rates.tiff
results/frontiers_submission/: README.md
results/supplementary_figures/: README.txt
results/tables/: bootstrap_ci_main_comparison.csv  (+45 more)
scripts/: 01_validate_data.py  02_build_long_format.py  03_create_splits.py  04_fit_rt_residuals.py  05_fit_response_state_models.py  06_train_baselines.py  07_train_multitask_model.py  08_run_adaptive_simulation.py  09_run_ablations.py  10_subgroup_robustness.py  11_generate_tables_figures.py  12_export_frontiers_submission_outputs.py  additional_analyses.py  check_expected_outputs.py  check_frontiers_submission_outputs.py  combine_outputs.py  download_data.py  evaluate_policy.py  run_all_pipeline.py  run_reproduction_stage.py  selective_auditing_analyses.py
tests/: test_frontiers_outputs.py  test_leakage.py  test_prefix_invariance.py
(+33 files in other folders)
